src/objects/pse_Idea_Rules_Evaluation__c.object
<CustomObject>
    <description>Rules to decide :
 - how many points are required to submit ideas to the innovation committee
 - who and how many approvers are required based on the innovation type (breakthrough, incremental, etc)</description>
    <fields>
        <fullName>pse_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of first approver.</description>
        <inlineHelpText>Name of first approver.</inlineHelpText>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Idea_Rules_Evaluation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of second approver.</description>
        <inlineHelpText>Name of second approver.</inlineHelpText>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Idea_Rules_Evaluation1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of third approver.</description>
        <inlineHelpText>Name of third approver.</inlineHelpText>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Idea_Rules_Evaluation2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Criteria__c</fullName>
        <formula>CASESAFEID(pse_Innovation_Category__c) + &quot;:&quot; + TEXT(pse_Points__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse_Innovation_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Category of Innovation as defined by the users on the Category Object.</description>
        <label>Category</label>
        <referenceTo>pse_Category__c</referenceTo>
        <relationshipLabel>Idea Rules Evaluation</relationshipLabel>
        <relationshipName>Idea_Rules_Evaluation</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Pain_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Paint point or challenge to be solved by the idea.</description>
        <inlineHelpText>Paint point or challenge to be solved by the idea.</inlineHelpText>
        <label>Pain Point</label>
        <referenceTo>pse_Pain_Point__c</referenceTo>
        <relationshipLabel>Idea Rules Evaluation</relationshipLabel>
        <relationshipName>Idea_Rules_Evaluation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse_Points__c</fullName>
        <description>Number of points required to submit ideas automatcally to the Innovation Committee.</description>
        <inlineHelpText>Number of points required to submit ideas automatcally to the Innovation Committee.</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Idea Rule Evaluation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>pse_Innovation_Category__c</columns>
        <columns>pse_Criteria__c</columns>
        <columns>pse_Points__c</columns>
        <columns>pse_Pain_Point__c</columns>
        <columns>pse_Approver_1__c</columns>
        <columns>pse_Approver_2__c</columns>
        <columns>pse_Approver_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RULE-{0000}</displayFormat>
        <label>Idea Rules Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Rules Evaluation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>